--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,6 +25,14 @@ layout: table_wrappers
           {% include components/children_nav.html toc_list=toc_list %}
         {% endif %}
 
+        <script src="https://utteranc.es/client.js"
+                repo="JongRok-Lee/JongRok-Lee.github.io"
+                issue-term="pathname"
+                theme="gruvbox-dark"
+                crossorigin="anonymous"
+                async>
+        </script>
+
         {% include components/footer.html %}
 
       </div>
