--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,10 +2,4 @@
 layout: default
 ---
 
-<script src="https://utteranc.es/client.js"
-        repo="JongRok-Lee/JongRok-Lee.github.io"
-        issue-term="pathname"
-        theme="gruvbox-dark"
-        crossorigin="anonymous"
-        async>
-</script>
+{{ content }}
